added "normalize" and linked in CSS in HTML

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gottfrids munkshop</title>
+
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-    
+    <h1>Gottfrids munkshop</h1>
 
 </body>
 </html>
