added meta tags & static.yml file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv" prefix="og: https://ogp.me/ns#"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gottfrids munkshop</title>
 
     <link rel="stylesheet" href="css/style.css" type="text/css">
+
+    <meta property="og:url" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Gottfrids Munkwebbshop">
+    <meta property="og:discription" content="Handla hem Snaskköpings godaste munkar">
+    <meta property="og:image" content="https://">
+
 </head>
 <body>
     <h1>Gottfrids munkshop</h1>
