--- a/index.html
+++ b/index.html
@@ -1,23 +1,49 @@
 <!DOCTYPE html>
 <html lang="sv" prefix="og: https://ogp.me/ns#"> 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gottfrids munkshop</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Gottfrids munkshop</title>
 
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+   <link rel="stylesheet" href="css/style.css" type="text/css">
 
-    <meta property="og:url" content="">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Gottfrids Munkwebbshop">
-    <meta property="og:discription" content="Handla hem Snaskköpings godaste munkar">
-    <meta property="og:image" content="https://">
+   <meta property="og:url" content="">
+   <meta property="og:type" content="website">
+   <meta property="og:title" content="Gottfrids Munkwebbshop">
+   <meta property="og:discription" content="Handla hem Snaskköpings godaste munkar">
+   <meta property="og:image" content="https://">
+
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=shopping_bag" />
 
 </head>
 <body>
-    <h1>Gottfrids munkshop</h1>
+   <header>
+      <h1>Gottfrids munkshop</h1>
+
+      <input class="varukorg-btn" type="checkbox">
+
+      <div class="varukorg">
+         <button aria-label="din-beställning" aria-hidden="true">
+            <span class="material-symbols-outlined">shopping_bag</span>
+         </button>
+
+         <nav>
+            <ul>
+            <li><a href="#Lägg-beställning">Lägg beställning</a></li>
+            </ul>
+         </nav>
+      </div>
+   </header>
+
+   <main>
+      <article>
+
+      </article>
+
+   </main>
+    
 
     
-    <script src="script.js"></script>
+   <script src="script.js"></script>
 </body>
 </html>
