update of main in html & test in scss

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
    </header>
 
    <main>
-      <article>
-         <img src="assets/photos/Äppelmunk.jpeg" alt="Rund, sockrig fylld munk">
-         <h2>Äppelmunk</h2>
-         25kr/st
-      </article>
+      <section>
+         <h2>Produkter</h2>
+         <div id="products-list">
+
+         </div> 
+      </section>
    </main>
 
    <footer>
