--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <section>
          <h2>Produkter</h2>
          <div id="products-list">
-
+            <!-- tillägg med produkterna i olika artiklar från JavaScript-->
          </div> 
       </section>
    </main>
