added visual buttons for able to sort donuts

--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
    <main>
       <section>
          <h2>Produkter</h2>
+         <div id="sort-products" class="sort">
+            <button id="sort-alpha">
+               <span class="material-symbols-outlined">sort_by_alpha</span>
+            </button>
+            <button id="sort-price" class="price">
+               <span class="material-symbols-outlined">price_change</span>
+            </button>
+            <button id="sort-category">
+               <span class="material-symbols-outlined">category</span>
+            </button>
+            <button id="sort-reviews" class="reviews">
+               <span class="material-symbols-outlined">reviews</span>
+            </button>
+         </div>
+
          <div id="products-list">
             <!-- tillägg med produkterna i olika artiklar från JavaScript-->
          </div> 
