Added sort function for each of the sort buttons

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <button id="sort-category">
                <span class="material-symbols-outlined">category</span>
             </button>
-            <button id="sort-reviews" class="reviews">
+            <button id="sort-rating" class="rating">
                <span class="material-symbols-outlined">reviews</span>
             </button>
          </div>
