Update of name of the webshop

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Gottfrids munkshop</title>
+   <title>Gottfrids Donuts webbshop</title>
 
    <link rel="stylesheet" href="css/style.css" type="text/css">
 
    <meta property="og:url" content="">
    <meta property="og:type" content="website">
-   <meta property="og:title" content="Gottfrids Munkwebbshop">
-   <meta property="og:discription" content="Handla hem Snaskköpings godaste munkar">
+   <meta property="og:title" content="Gottfrids Donuts">
+   <meta property="og:discription" content="Handla hem Snaskköpings godaste munkar och donuts!">
    <meta property="og:image" content="https://">
 
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
@@ -18,7 +18,7 @@
 </head>
 <body>
    <header>
-      <h1>Gottfrids munkshop</h1>
+      <h1>Gottfrids Donuts</h1>
 
       <input class="basket-btn" type="checkbox">
 
@@ -37,7 +37,7 @@
 
    <main>
       <section>
-         <h2>Produkter</h2>
+         <h2>Våra hembakade munkar och donuts</h2>
          <div id="sort-products" class="sort">
             <button id="sort-alpha">
                <span class="material-symbols-outlined">sort_by_alpha</span>
