--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Gottfrids Donuts webbshop</title>
+   <title>Gottfrids Donuts-webbshop</title>
 
    <link rel="stylesheet" href="css/style.css" type="text/css">
 
