added cart summary section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
    <header>
       <h1>Gottfrids Donuts</h1>
 
-      <input class="basket-btn" type="checkbox">
+      <button>
+         <span class="material-symbols-outlined">shopping_bag</span>
+      </button>
+      <section class="cart" id="cart-summary">
+         <h2>Varukorg</h2>
+         <!-- lista med produkterna som lagts i ens varukorg, generera med JavaScript -->
+      </section>
+      
+      <!-- Återkom till nedanstående för själva varukorg-knappen: -->
+      <!-- <input class="basket-btn" type="checkbox">
 
       <div class="basket">
          <button aria-label="your-order" aria-hidden="true">
@@ -32,7 +41,7 @@
             <li><a href="#place-order">Lägg beställning</a></li>
             </ul>
          </nav>
-      </div>
+      </div> -->
    </header>
 
    <main>
