Update function for cart summary

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
       <button>
          <span class="material-symbols-outlined">shopping_bag</span>
       </button>
-      <section class="cart" id="cart-summary">
-         <h2>Varukorg</h2>
+      <section class="cart">
+         <p>Varukorg</p>
          <!-- lista med produkterna som lagts i ens varukorg, generera med JavaScript -->
+         <div id="cart-summary">Din varukorg är tom.</div>
       </section>
       
       <!-- Återkom till nedanstående för själva varukorg-knappen: -->
