--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
       <section>
          <h2>Våra hembakade munkar och donuts</h2>
          <div id="sort-products" class="sort">
-            <button id="sort-alpha">
+            <button id="sort-alpha" class="sort-alpha">
                <span class="material-symbols-outlined">sort_by_alpha</span>
             </button>
-            <button id="sort-price" class="price">
+            <button id="sort-price" class="sort-price">
                <span class="material-symbols-outlined">price_change</span>
             </button>
-            <button id="sort-category">
+            <button id="sort-category" class="sort-category">
                <span class="material-symbols-outlined">category</span>
             </button>
-            <button id="sort-rating" class="rating">
+            <button id="sort-rating" class="sort-rating">
                <span class="material-symbols-outlined">reviews</span>
             </button>
          </div>
