small tag change

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1>Gottfrids Donuts</h1>
 
       <section class="cart">
-         <p>Varukorg</p>
+         <h2>Varukorg</h2>
          <!-- lista med produkterna som lagts i ens varukorg, generera med JavaScript -->
          <div id="cart-summary">Din varukorg är tom.</div>
       </section>
