--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!doctype html>
 <html lang="en" prefix="og: https://ogp.me/ns#">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gottfrids Donuts-webbshop</title>
 
-  <link rel="stylesheet" href="css/style.css" type="text/css"/>
+  <link rel="stylesheet" href="css/style.css" type="text/css">
 
-  <meta property="og:url" content=""/>
-  <meta property="og:type" content="website"/>
-  <meta property="og:title" content="Gottfrids Donuts"/>
-  <meta property="og:discription" content="Handla hem Snaskköpings godaste munkar och donuts!"/>
-  <meta property="og:image" content="https://"/>
+  <meta property="og:url" content="">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Gottfrids Donuts">
+  <meta property="og:discription" content="Handla hem Snaskköpings godaste munkar och donuts!">
+  <meta property="og:image" content="https://">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com"/>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
 </head>
 
 <body>
@@ -61,65 +61,65 @@
 
         <label>
           <span>Förnamn</span>
-          <input type="text" required />
+          <input type="text" required>
         </label>
 
         <label>
           <span>Efternamn</span>
-          <input type="text" required />
+          <input type="text" required>
         </label>
 
         <label>
           <span>Adress</span>
-          <input type="text" required />
+          <input type="text" required>
         </label>
 
         <label>
           <span>Postnummer</span>
-          <input type="number" required />
+          <input type="number" required>
         </label>
 
         <label>
           <span>Postort</span>
-          <input type="text" required />
+          <input type="text" required>
         </label>
 
         <label>
           <span>Portkod</span>
-          <input type="text" />
+          <input type="text">
         </label>
 
         <label>
           <span>Email</span>
-          <input type="email" required />
+          <input type="email" required>
         </label>
 
         <label>
           <span>Telefon</span>
-          <input type="tel" required />
+          <input type="tel" required>
         </label>
 
-        <label class="payment-option">
+        <div class="payment-option">
           <span>Betalsätt</span>
-          <input type="radio" id="card" name="payment" />
-          <label for="card">Kort</label><br />
-          <input type="radio" id="invoice" name="payment" />
-          <label for="invoice">Faktura</label><br />
-        </label>
+          <input type="radio" id="card" name="payment">
+          <label for="card">Kort</label>
+          <input type="radio" id="invoice" name="payment">
+          <label for="invoice">Faktura</label>
+        </div>
 
         <label class="approve-info">
           <span>Jag samtycker till behandling av mina personuppgifter</span>
-          <input type="checkbox" required />
+          <input type="checkbox" required>
         </label>
 
         <label class="newsletter">
           <span>Jag önskar motta nyhetsbrev</span>
-          <input type="checkbox" />
+          <input type="checkbox">
         </label>
 
         <div class="form-buttons">
-          <input type="reset" value="Rensa" class="reset" />
-          <input type="submit" value="Beställ" class="order" />
+          <input type="reset" value="Rensa" class="reset">
+          <input type="submit" value="Beställ" class="order">
         </div>
       </form>
     </section>
