change of language and small letters after feedback

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang="en" prefix="og: https://ogp.me/ns#">
+<html lang="sv" prefix="og: https://ogp.me/ns#">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gottfrids Donuts-webbshop</title>
 
