added function to clear cart and order form when pressing "Rensa beställning"-btn

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </div>
 
         <div class="form-buttons">
-          <input type="reset" value="Rensa" class="reset">
+          <input type="reset" value="Rensa beställning" class="reset" id="reset-btn">
           <input type="submit" value="Beställ" class="order" id="order-btn" disabled>
         </div>
       </form>
