added total amount in the order form

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
           </label>
         </div>
 
+        <div class="final-amount" id="final-amount"> 
+          <!--fyll in totalsumman i javascript-->
+        </div>
+
         <div class="form-buttons">
           <input type="reset" value="Rensa beställning" class="reset" id="reset-btn">
           <input type="submit" value="Beställ" class="order" id="order-btn" disabled>
