Added discount field

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
           <input type="tel" required>
         </label>
 
+        <label>
+          <span>Rabattkod</span>
+          <input type="text" checked>
+        </label>
+        
         <label class="approve-info">
           <span>Jag samtycker till behandling av mina personuppgifter</span>
           <input type="checkbox" required>
