added article tag for order confirmation to be added i js

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <span>Rabattkod</span>
           <input type="text" checked>
         </label>
-        
+
         <label class="approve-info">
           <span>Jag samtycker till behandling av mina personuppgifter</span>
           <input type="checkbox" required>
@@ -161,6 +161,10 @@
           <input type="submit" value="Beställ" class="order" id="order-btn" disabled>
         </div>
       </form>
+
+      <article class="order-confirmation" id="order-confirmation">
+        <!--fyll på med javascript-->
+      </article>
 
     </section>
 
