--- a/index.html
+++ b/index.html
@@ -61,47 +61,56 @@
 
         <label>
           <span>Förnamn</span>
-          <input type="text" required>
+          <input type="text" id="first-name" required>
+          <span class="error" id="first-name-error"></span>
         </label>
 
         <label>
           <span>Efternamn</span>
-          <input type="text" required>
+          <input type="text" id="last-name" required>
+          <span class="error" id="last-name-error"></span>
         </label>
 
         <label>
           <span>Adress</span>
-          <input type="text" required>
+          <input type="text" id="address" required>
+          <span class="error" id="address-error"></span>
         </label>
 
         <label>
           <span>Postnummer</span>
-          <input type="number" required>
+          <input type="number" id="postal-code" required>
+          <span class="error" id="postal-code-error"></span>
         </label>
 
         <label>
           <span>Postort</span>
-          <input type="text" required>
+          <input type="text" id="city" required>
+          <span class="error" id="city-error"></span>
         </label>
 
         <label>
           <span>Portkod</span>
           <input type="text">
+          <span class="error" id="door-code-error"></span>
         </label>
 
         <label>
           <span>Email</span>
-          <input type="email" required>
+          <input type="email" id="email" required>
+          <span class="error" id="email-error"></span>
         </label>
 
         <label>
           <span>Telefon</span>
-          <input type="tel" required>
+          <input type="tel" id="phone" required>
+          <span class="error" id="phone-error"></span>
         </label>
 
         <label>
           <span>Rabattkod</span>
           <input type="text" checked>
+          <span class="error" id="discount-error"></span>
         </label>
 
         <label class="approve-info">
