added aria label & hidden for sort buttons/picture on button

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
     <section>
       <h2>Våra hembakade munkar och donuts</h2>
       <div id="sort-products" class="sort">
-        <button id="sort-alpha" class="sort-alpha">
-          <span class="material-symbols-outlined">sort_by_alpha</span>
+        <button id="sort-alpha" class="sort-alpha" aria-label="Sortera alfabetisk">
+          <span class="material-symbols-outlined" aria-hidden="true">sort_by_alpha</span>
         </button>
-        <button id="sort-price" class="sort-price">
-          <span class="material-symbols-outlined">price_change</span>
+        <button id="sort-price" class="sort-price" aria-label="Sortera på pris">
+          <span class="material-symbols-outlined" aria-hidden="true">price_change</span>
         </button>
-        <button id="sort-category" class="sort-category">
-          <span class="material-symbols-outlined">category</span>
+        <button id="sort-category" class="sort-category" aria-label="Sortera på kategori">
+          <span class="material-symbols-outlined" aria-hidden="true">category</span>
         </button>
-        <button id="sort-rating" class="sort-rating">
-          <span class="material-symbols-outlined">reviews</span>
+        <button id="sort-rating" class="sort-rating" aria-label="Sortera på betyg">
+          <span class="material-symbols-outlined" aria-hidden="true">reviews</span>
         </button>
       </div>
 
