added error message for personal id number (& error span in HTML)

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
           <label>
             <span>Personnummer</span>
             <input type="text" name="personal-id" id="personal-id">
+            <span class="error" id="personal-id-error"></span>
           </label>
         </div>
 
