--- a/index.html
+++ b/index.html
@@ -137,19 +137,21 @@
           </div>
         
           <div class="card" id="card">
-            <label>
+            <label class="card-number-label">
               <span>Kortnummer</span>
               <input type="number" id="credit-card-number"> 
             </label>
-            <label>
-              <span>Datum</span>
-                <input type="number" class="small" placeholder="YY" id="credit-card-year">
-            </label>
-            <label>
-              <span>/</span>
-              <input type="number" class="small" placeholder="MM" id="credit-card-month">
-            </label>
-            <label>
+            <div class="card-date">
+              <label class="card-date-year">
+                <span>Datum</span>
+                  <input type="number" class="small" placeholder="YY" id="credit-card-year">
+              </label>
+              <label>
+                <span>/</span>
+                <input type="number" class="small" placeholder="MM" id="credit-card-month">
+              </label>
+            </div>
+            <label class="cvc-label">
               <span>CVC</span>
               <input type="number" placeholder="123" id="credit-card-cvc">
             </label>
