added * to input fields that are requierd in order form

--- a/index.html
+++ b/index.html
@@ -60,31 +60,31 @@
         <h2>Lägg beställning</h2>
 
         <label>
-          <span>Förnamn</span>
+          <span>Förnamn*</span>
           <input type="text" id="first-name" required>
           <span class="error" id="first-name-error"></span>
         </label>
 
         <label>
-          <span>Efternamn</span>
+          <span>Efternamn*</span>
           <input type="text" id="last-name" required>
           <span class="error" id="last-name-error"></span>
         </label>
 
         <label>
-          <span>Adress</span>
+          <span>Adress*</span>
           <input type="text" id="address" required>
           <span class="error" id="address-error"></span>
         </label>
 
         <label>
-          <span>Postnummer</span>
+          <span>Postnummer*</span>
           <input type="number" id="postal-code" required>
           <span class="error" id="postal-code-error"></span>
         </label>
 
         <label>
-          <span>Postort</span>
+          <span>Postort*</span>
           <input type="text" id="city" required>
           <span class="error" id="city-error"></span>
         </label>
@@ -96,13 +96,13 @@
         </label>
 
         <label>
-          <span>Email</span>
+          <span>Email*</span>
           <input type="email" id="email" required>
           <span class="error" id="email-error"></span>
         </label>
 
         <label>
-          <span>Telefon</span>
+          <span>Telefon*</span>
           <input type="tel" id="phone" required>
           <span class="error" id="phone-error"></span>
         </label>
