added classes for checkbox to be able to make them bigger

--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
 
         <label class="approve-info">
           <span>Jag samtycker till behandling av mina personuppgifter</span>
-          <input type="checkbox" required>
+          <input type="checkbox" class="checkbox-approve-info" required>
         </label>
 
         <label class="newsletter">
           <span>Jag önskar motta nyhetsbrev</span>
-          <input type="checkbox" checked>
+          <input type="checkbox" class="checkbox-newsletter" checked>
         </label>
 
         <div class="payment-option">
