added so checkbox for treating personal data needs to be checked to activate order btn

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <label class="approve-info">
           <span>Jag samtycker till behandling av mina personuppgifter</span>
-          <input type="checkbox" class="checkbox-approve-info" required>
+          <input type="checkbox" class="checkbox-approve-info" id="checkbox-approve-info" required>
         </label>
 
         <label class="newsletter">
