updated name in footer to match h1

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
     <address>
       <div>
         <a href="tel:+4681234567">+46 8 123 45 67 <span class="material-symbols-outlined">call</span></a>
-        <a href="mailto:info@gottfridsmunkshop.com">info@gottfridsmunkshop.com<span class="material-symbols-outlined">alternate_email</span></a>
-        <a href="text">Gottfrids munkshop, 111 25 Snaskköping<span class="material-symbols-outlined">location_on</span></a>
+        <a href="mailto:info@gottfridsmunkshop.com">info@gottfridsdonuts.com<span class="material-symbols-outlined">alternate_email</span></a>
+        <a href="text">Gottfrids Donuts, 111 25 Snaskköping<span class="material-symbols-outlined">location_on</span></a>
       </div>
     </address>
   </footer>
