add img for header

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 
 <body>
   <header>
-    <h1>Gottfrids Donuts</h1>
-
+    <section class="header-container">
+      <h1>Gottfrids Donuts</h1>
+      <img src="assets/photos/donuts-front.jpg" alt="ollika donuts uplagda på ett bord i ett bageri." width="100%">
+    </section>
+    
     <section class="cart">
       <h2>Varukorg</h2>
       <!-- lista med produkterna som lagts i ens varukorg, generera med JavaScript -->
